<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    tools:context="zw.co.grafti.grafti.DeleteAccount_fragment"
    android:layout_gravity="center_vertical">

    <!-- TODO: Update blank fragment layout -->
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/deleteAcc"
       android:padding="5dp"
       android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optionYes"
        android:id="@+id/deleteYes"
        android:background="@color/red"
        android:textColor="@color/white"
            android:onClick="deleteAccnt"/>

        <Button
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optionNo"
            android:id="@+id/deletNo"
            android:background="@color/green"
            android:textColor="@color/white"/>

    </LinearLayout>
</LinearLayout>
