<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="zw.co.grafti.grafti.MainActivity">



    <LinearLayout
        android:id="@+id/content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/graftilogoh"
            android:contentDescription="grafti" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/purple"
            android:text="Connecting you to freelancers ready to take on the job"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="0dp">
            <EditText
                android:id="@+id/txtSearch"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/hint_search"/>
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_marginTop="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categories"
            android:textSize="13sp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/category"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dropdown"
            android:entries="@array/search_categories"
            android:background="@color/washed_out_purple"
            />

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_search"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@color/purple"
            android:onClick="search_pressed"/>

        <TextView
            android:layout_marginTop="20dp"
            android:textColor="@color/blue300"
            android:onClick="login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="@string/signup_or_login"/>

    </LinearLayout>
</ScrollView>
